force-app/main/default/objects/PDPA_Activity_Log__c/PDPA_Activity_Log__c.object-meta.xml
<CustomObject>
    <label>PDPA Activity Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000}</displayFormat>
        <label>PDPA Activity Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDPA Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>