force-app/main/default/objects/PDPA_Activity_Log__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ประเภท Activity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>