force-app/main/default/objects/PDPA_Activity_Log__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <description>convert create by to user.email</description>
    <formula>CreatedBy.Email</formula>
    <label>พนักงานผู้ให้บริการ</label>
    <type>Text</type>
</CustomField>