force-app/main/default/objects/PDPA_Activity_Log__c/fields/Consent_Formula__c.field-meta.xml
<CustomField>
    <fullName>Consent_Formula__c</fullName>
    <formula>IF((Consent__c  == &apos;N&apos; || Consent__c  == &apos;NO&apos;),&quot;ไม่ยินยอม&quot; ,
 IF((Consent__c  == &apos;Y&apos; || Consent__c  == &apos;YES&apos;),&quot;ยินยอม&quot;,
  IF((Consent__c  == &apos;&apos; || Consent__c  == null),&quot;ยังไม่ให้ความยินยอม&quot;,null)))</formula>
    <label>การให้ความยินยอม</label>
    <type>Text</type>
</CustomField>