force-app/main/default/objects/PDPA_Activity_Log__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <description>PDPA, Marketing Conduct</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ประเภทความยินยอม</label>
    <length>100</length>
    <type>Text</type>
</CustomField>