force-app/main/default/objects/PDPA_Activity_Log__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <description>Create Date will stamp date upon a click of the &quot;Print&quot; button or &quot;Email&quot; button</description>
    <encryptionScheme>None</encryptionScheme>
    <label>วันที่พนักงานให้บริการ</label>
    <type>DateTime</type>
</CustomField>