force-app/main/default/objects/PDPA_Activity_Log__c/fields/Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Description_EN__c</fullName>
    <description>PDPA = Consent of collecting using and disclosing personal data
MC = Consent of disclosing personal data for marketing purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <label>คำอธิบาย (EN)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>