force-app/main/default/objects/PDPA_Activity_Log__c/fields/Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>วันที่บันทึกเข้าระบบ</label>
    <type>DateTime</type>
</CustomField>