force-app/main/default/objects/PDPA_Activity_Log__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>วันที่ลูกค้าร้องขอ</label>
    <type>Date</type>
</CustomField>