force-app/main/default/objects/PDPA_Activity_Log__c/fields/User_Channel__c.field-meta.xml
<CustomField>
    <fullName>User_Channel__c</fullName>
    <formula>TEXT( CreatedBy.RTL_Channel__c )</formula>
    <label>ช่องทางที่พนักงานให้บริการ</label>
    <type>Text</type>
</CustomField>